# neon

./: .gitignore  CMakeLists.txt  README  README.md
notes/: example-commit-log.json
src/: add-files.cpp  commit.cpp  config.cpp  init.cpp  init.h  neon.cpp
src/include/: commit.h  file.h
